binrw/tests/ui/args_vec_mistakes.stderr
error[E0277]: the trait bound `VecArgs<()>: Default` is not satisfied
  --> tests/ui/args_vec_mistakes.rs:7:20
   |
7  | struct MissingArgs(Vec<u8>);
   |                    ^^^^^^^ the trait `Default` is not implemented for `VecArgs<()>`
   |
   = note: required for `VecArgs<()>` to implement `MissingArgsDirective`
note: required by a bound in `Required::args`
  --> src/private.rs
   |
   | pub trait Required: MissingArgsDirective {
   |                     ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Required::args`

error[E0308]: mismatched types
  --> tests/ui/args_vec_mistakes.rs:10:23
   |
10 | struct WrongType(#[br(args((),))] Vec<u8>);
   |                       ^^^^        ------- expected due to this
   |                       |
   |                       expected `VecArgs<()>`, found `((),)`
   |
   = note: expected struct `VecArgs<()>`
               found tuple `((),)`

error[E0599]: the method `finalize` exists for struct `VecArgsBuilder<(), Needed, Satisfied>`, but its trait bounds were not satisfied
  --> tests/ui/args_vec_mistakes.rs:13:26
   |
13 | struct MissingCount(#[br(args { inner: () })] Vec<u8>);
   |                          ^^^^ method cannot be called on `VecArgsBuilder<(), Needed, Satisfied>` due to unsatisfied trait bounds
   |
  ::: src/named_args.rs
   |
   | pub struct Needed;
   | ----------------- doesn't satisfy `Needed: SatisfiedOrOptional`
   |
   = note: the following trait bounds were not satisfied:
           `Needed: SatisfiedOrOptional`
   = note: this error originates in the macro `binrw::args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: From<Option<{integer}>>` is not satisfied
  --> tests/ui/args_vec_mistakes.rs:22:36
   |
22 | struct WrongCountType(#[br(count = Some(1))] Vec<u8>);
   |                                    ^^^^^^^ the trait `From<Option<{integer}>>` is not implemented for `usize`
   |
   = help: the following other types implement trait `From<T>`:
             <usize as From<NonZeroUsize>>
             <usize as From<bool>>
             <usize as From<std::ptr::Alignment>>
             <usize as From<u16>>
             <usize as From<u8>>
   = note: required for `Option<{integer}>` to implement `Into<usize>`
   = note: required for `usize` to implement `TryFrom<Option<{integer}>>`

error[E0599]: the method `finalize` exists for struct `VecArgsBuilder<(NoDefault,), Satisfied, Needed>`, but its trait bounds were not satisfied
  --> tests/ui/args_vec_mistakes.rs:25:42
   |
25 | struct MissingInnerArgs(#[br(count = 1)] Vec<Inner>);
   |                                          ^^^^^^^^^^ method cannot be called on `VecArgsBuilder<(NoDefault,), Satisfied, Needed>` due to unsatisfied trait bounds
   |
  ::: src/named_args.rs
   |
   | pub struct Needed;
   | ----------------- doesn't satisfy `Needed: SatisfiedOrOptional`
   |
   = note: the following trait bounds were not satisfied:
           `(NoDefault,): Default`
           `Needed: SatisfiedOrOptional`
   = note: this error originates in the macro `binrw::args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `VecArgs<()>: Default` is not satisfied
  --> tests/ui/args_vec_mistakes.rs:28:5
   |
28 |     Vec::<u8>::read(&mut binrw::io::Cursor::new(b"")).unwrap();
   |     ^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `VecArgs<()>`
   |
   = note: required for `VecArgs<()>` to implement `Required`
note: required by a bound in `binrw::BinRead::read`
  --> src/binread/mod.rs
   |
   |         for<'a> Self::Args<'a>: Required,
   |                                 ^^^^^^^^ required by this bound in `BinRead::read`
